// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"favicon" option 1`] = `
"<!DOCTYPE html>
        <html lang=\\"en\\">
          <head>
            
            
            
            <meta name=\\"theme-color\\" content=\\"#FFFFFF\\"/>
            
            <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" />
            <link rel=\\"shortcut icon\\" href=\\"/favicon.ico\\" />
            <meta charset=\\"utf-8\\" />
            <meta
              content=\\"width=device-width,initial-scale=1.0\\"
              name=\\"viewport\\"
            />
          </head>
          <body>
            
            <div id=\\"react-view\\"></div>
            <script
              id=\\"inj\\"
              type=\\"application/javascript\\"
              nonce=\\"abcdef-dummy-nonce\\"
            >
              window.INJ=\\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBqrVlCGhUyhXTWTPFlSbgmX7mf9UJCV6o+6N49TRM8T/Zt5SRase/W0YFEHYmiKSLZgUQPXsUoxsSTABdZa9BdRV/oUK68Qi2md0HR0J+b+HTZLAIsrRxHKMjBsUfmWUQjhOXxz8uZkjMyqgSptcNXEftmR5kazR/qzkkQcObSKPuDAKU03KPvQYU8IFE4CiNOX2Iw+T3MoeOLcuMcbBkvEUpXOo8tg7/9XQIY2QxEY+VOgOOywhCiFCspUah8KD+PeKXkuJdPx731E90C7TJz6AAvBfqtI2xCmRQrm5eP/Hk+E+WziLt4iuX0A+KQf2Gmz192mTIfsvGZsLnTtwMbA==\\"
            </script>
            <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>
            
          </body>
        </html>"
`;

exports[`Base rendering of HTML template 1`] = `
"<!DOCTYPE html>
        <html lang=\\"en\\">
          <head>
            
            
            
            <meta name=\\"theme-color\\" content=\\"#FFFFFF\\"/>
            
            <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" />
            
            <meta charset=\\"utf-8\\" />
            <meta
              content=\\"width=device-width,initial-scale=1.0\\"
              name=\\"viewport\\"
            />
          </head>
          <body>
            
            <div id=\\"react-view\\"></div>
            <script
              id=\\"inj\\"
              type=\\"application/javascript\\"
              nonce=\\"abcdef-dummy-nonce\\"
            >
              window.INJ=\\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBqrVlCGhUyhXTWTPFlSbgmX7mf9UJCV6o+6N49TRM8T/Zt5SRase/W0YFEHYmiKSLZgUQPXsUoxsSTABdZa9BdRV/oUK68Qi2md0HR0J+b+HTZLAIsrRxHKMjBsUfmWUQjhOXxz8uZkjMyqgSptcNXEftmR5kazR/qzkkQcObSKPuDAKU03KPvQYU8IFE4CiNOX2Iw+T3MoeOLcuMcbBkvEUpXOo8tg7/9XQIY2QxEY+VOgOOywhCiFCspUah8KD+PeKXkuJdPx731E90C7TJz6AAvBfqtI2xCmRQrm5eP/Hk+E+WziLt4iuX0A+KQf2Gmz192mTIfsvGZsLnTtwMbA==\\"
            </script>
            <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>
            
          </body>
        </html>"
`;

exports[`Config overriding for injection 1`] = `
"<!DOCTYPE html>
        <html lang=\\"en\\">
          <head>
            
            
            
            <meta name=\\"theme-color\\" content=\\"#FFFFFF\\"/>
            
            <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" />
            
            <meta charset=\\"utf-8\\" />
            <meta
              content=\\"width=device-width,initial-scale=1.0\\"
              name=\\"viewport\\"
            />
          </head>
          <body>
            
            <div id=\\"react-view\\"></div>
            <script
              id=\\"inj\\"
              type=\\"application/javascript\\"
              nonce=\\"abcdef-dummy-nonce\\"
            >
              window.INJ=\\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBqrVlCGhUyhXTWTPFlSbgmX7mf9UJCV6o+6N49TRM8T/Zt5SRase/W0YFEHYmiKSLZgUQPXsUoxsSTABdZa9BdRV/oUK68Qi2md0HR0J+b+HTZLAIsrRxHKMjBsUfmWUQjhOXxz8uZkjMyqgSptcNXEftmR5kazR/qzkkQcObSKPuDAKU03KPvQYU8IFE4CiNOX2Iw+T3MoeOLcuMcbBkvEUpXOo8tg7/9XQIY2QxEY+VOgOOywhCiFCspUah8KD+PeKXkuJdPx731E90C7TJz6AAvBfqtI2xCmRQrm5eP/HYGOGCzato9u5s+ut7/e3ZQnNtcgsTXzG07KkvKZ1L6mF79YTHIeuBqvhmo5/jURaqkPL0D9nLJd+gKl/DXtp9\\"
            </script>
            <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>
            
          </body>
        </html>"
`;

exports[`Hemlet integration works 1`] = `
"<!DOCTYPE html>
        <html lang=\\"en\\">
          <head>
            
            <title data-react-helmet=\\"true\\">Test Page Title</title>
            <meta data-react-helmet=\\"true\\" property=\\"description\\" content=\\"Test Page Description\\"/>
            <meta name=\\"theme-color\\" content=\\"#FFFFFF\\"/>
            
            <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" />
            
            <meta charset=\\"utf-8\\" />
            <meta
              content=\\"width=device-width,initial-scale=1.0\\"
              name=\\"viewport\\"
            />
          </head>
          <body>
            
            <div id=\\"react-view\\"><div><p>Hello World!</p><p>Goodbye World!</p></div></div>
            <script
              id=\\"inj\\"
              type=\\"application/javascript\\"
              nonce=\\"abcdef-dummy-nonce\\"
            >
              window.INJ=\\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBqrVlCGhUyhXTWTPFlSbgmX7mf9UJCV6o+6N49TRM8T/Zt5SRase/W0YFEHYmiKSLZgUQPXsUoxsSTABdZa9BdRV/oUK68Qi2md0HR0J+b+HTZLAIsrRxHKMjBsUfmWUQjhOXxz8uZkjMyqgSptcNXEftmR5kazR/qzkkQcObSKPuDAKU03KPvQYU8IFE4CiNOX2Iw+T3MoeOLcuMcbBkvEUpXOo8tg7/9XQIY2QxEY+VOgOOywhCiFCspUah8KD+PeKXkuJdPx731E90C7TJz6AAvBfqtI2xCmRQrm5eP/Hk+E+WziLt4iuX0A+KQf2Gmz192mTIfsvGZsLnTtwMbA==\\"
            </script>
            <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>
            
          </body>
        </html>"
`;

exports[`Injection of additional JS scripts 1`] = `
"<!DOCTYPE html>
        <html lang=\\"en\\">
          <head>
            <script>1-st script after opening <head></script><script>2-nd script after opening <head></script>
            
            
            <meta name=\\"theme-color\\" content=\\"#FFFFFF\\"/>
            
            <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" />
            
            <meta charset=\\"utf-8\\" />
            <meta
              content=\\"width=device-width,initial-scale=1.0\\"
              name=\\"viewport\\"
            />
          </head>
          <body>
            <script>1-st script after opening <body></script><script>2-nd script after opening <body></script>
            <div id=\\"react-view\\"></div>
            <script
              id=\\"inj\\"
              type=\\"application/javascript\\"
              nonce=\\"abcdef-dummy-nonce\\"
            >
              window.INJ=\\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBqrVlCGhUyhXTWTPFlSbgmX7mf9UJCV6o+6N49TRM8T/Zt5SRase/W0YFEHYmiKSLZgUQPXsUoxsSTABdZa9BdRV/oUK68Qi2md0HR0J+b+HTZLAIsrRxHKMjBsUfmWUQjhOXxz8uZkjMyqgSptcNXEftmR5kazR/qzkkQcObSKPuDAKU03KPvQYU8IFE4CiNOX2Iw+T3MoeOLcuMcbBkvEUpXOo8tg7/9XQIY2QxEY+VOgOOywhCiFCspUah8KD+PeKXkuJdPx731E90C7TJz6AAvBfqtI2xCmRQrm5eP/Hk+E+WziLt4iuX0A+KQf2Gmz192mTIfsvGZsLnTtwMbA==\\"
            </script>
            <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>
            <script>Dummy JS Sript</script><script>Another Dummy JS Script</script><script>Yet another Dummy JS Script</script>
          </body>
        </html>"
`;

exports[`Server-side rendering (SSR); injection of CSS chunks & Redux state 1`] = `
"<!DOCTYPE html>
        <html lang=\\"en\\">
          <head>
            
            <title data-react-helmet=\\"true\\"></title>
            
            <meta name=\\"theme-color\\" content=\\"#FFFFFF\\"/>
            
            <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" /><link href=\\"/test/public/path/test-chunk-a-1511941200000.css\\" rel=\\"stylesheet\\" /><link href=\\"/test/public/path/test-chunk-b-1511941200000.css\\" rel=\\"stylesheet\\" />
            
            <meta charset=\\"utf-8\\" />
            <meta
              content=\\"width=device-width,initial-scale=1.0\\"
              name=\\"viewport\\"
            />
          </head>
          <body>
            
            <div id=\\"react-view\\"><div>Hello Wold!</div></div>
            <script
              id=\\"inj\\"
              type=\\"application/javascript\\"
              nonce=\\"abcdef-dummy-nonce\\"
            >
              window.INJ=\\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBqrVlCGhUyhXTWTPFlSbgmX7mf9UJCV6o+6N49TRM8T/Zt5SRase/W0YFEHYmiKSLZgUQPXsUoxsSTABdZa9BdRV/oUK68Qi2md0HR0J+b+HTZLAIsrRxHKMjBsUfmWUQjhOXxz8uZkjMyqgSptcNXEftmR5kazR/qzkkQcObSKPuDAKU03KPvQYU8IFE4CiNOX2Iw+T3MoeOLcuMcbBkvEUpXOo8tg7/9XQIY2QxEY+VOgOOywhCiFCspUah8KD+PeKXkuJdPx731E90C7TJz6AAvBfqtI2xCmRQrm5eP/Hk+E+WziLt4iuX0A+KQf2G5q7+5l3nEi11Oo+8akc1lzJ3POru9493NaRtiaXIdujjIKAdM9YnLJXgOd+amt3D0NjRx5bVsHLauDbqPAeOAQ==\\"
            </script>
            <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/test-chunk-b-1511941200000.js\\" type=\\"application/javascript\\"></script>
            
          </body>
        </html>"
`;

exports[`Setting of response HTTP status the server-side rendering 1`] = `
"HTTP STATUS: 404
<!DOCTYPE html>
        <html lang=\\"en\\">
          <head>
            
            <title data-react-helmet=\\"true\\"></title>
            
            <meta name=\\"theme-color\\" content=\\"#FFFFFF\\"/>
            
            <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" />
            
            <meta charset=\\"utf-8\\" />
            <meta
              content=\\"width=device-width,initial-scale=1.0\\"
              name=\\"viewport\\"
            />
          </head>
          <body>
            
            <div id=\\"react-view\\"><div>404 Error Test</div></div>
            <script
              id=\\"inj\\"
              type=\\"application/javascript\\"
              nonce=\\"abcdef-dummy-nonce\\"
            >
              window.INJ=\\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBqrVlCGhUyhXTWTPFlSbgmX7mf9UJCV6o+6N49TRM8T/Zt5SRase/W0YFEHYmiKSLZgUQPXsUoxsSTABdZa9BdRV/oUK68Qi2md0HR0J+b+HTZLAIsrRxHKMjBsUfmWUQjhOXxz8uZkjMyqgSptcNXEftmR5kazR/qzkkQcObSKPuDAKU03KPvQYU8IFE4CiNOX2Iw+T3MoeOLcuMcbBkvEUpXOo8tg7/9XQIY2QxEY+VOgOOywhCiFCspUah8KD+PeKXkuJdPx731E90C7TJz6AAvBfqtI2xCmRQrm5eP/Hk+E+WziLt4iuX0A+KQf2Gmz192mTIfsvGZsLnTtwMbA==\\"
            </script>
            <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>
            
          </body>
        </html>"
`;

exports[`Throws in case of forge.random.getBytes(..) failure 1`] = `[Error: Emulated Failure of forge.random.getBytes(..)]`;

exports[`Throws in case of forge.random.getBytes(..) failure 2`] = `""`;
